<resources>
    <string name="app_name">myCampus</string>
    <string name="title_parking">Parking</string>
    <string name="title_restaurant">Restaurant</string>
    <string name="title_settings">Settings</string>

    <string name="parking_p10">P10 - Rooftop normal usage</string>
    <string name="parking_p5">Parking P5 usage</string>
    <string name="parking_p10_inside">P10 - Inside usage</string>
    <string name="restaurant_usage">Restaurant usage</string>
    <string name="p10_electric_usage">P10 - Rooftop electric usage</string>
</resources>
