<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">


    <FrameLayout
        android:id="@+id/hoster_frag"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="78dp"/>

    <LinearLayout
        android:id="@+id/nav_view"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="10dp">

        <Button
            android:elevation="0dp"
            android:id="@+id/navigation_parking"
            android:layout_margin="2dp"
            android:padding="5dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/card_bg"
            android:drawableTop="@drawable/ic_local_parking_24px"
            android:drawableTint="@color/white"
            android:text="@string/title_parking"
            android:textColor="@color/white"
            android:textSize="10dp" />

        <Button
            android:id="@+id/navigation_restaurant"
            android:layout_margin="2dp"
            android:padding="5dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/card_bg"
            android:drawableTop="@drawable/restaurant_24px"
            android:drawableTint="@color/white"
            android:text="@string/title_restaurant"
            android:textColor="@color/white"
            android:textSize="10dp" />

        <Button
            android:id="@+id/navigation_settings"
            android:layout_margin="2dp"
            android:padding="5dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/card_bg"
            android:drawableTop="@drawable/settings_24px"
            android:drawableTint="@color/white"
            android:text="@string/title_settings"
            android:textColor="@color/white"
            android:textSize="10dp" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>