<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:padding="20dp"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_weight="1"
        android:id="@+id/p5layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card_bg"
        android:clipToPadding="true"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="5dp"
            android:text="@string/parking_p5"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <ProgressBar
                android:id="@+id/p5progress"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:progress="0"
                android:background="@drawable/circlebackground"
                android:progressDrawable="@drawable/circle"
                android:rotation="90"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/p5textprogress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text=""
                android:textColor="@color/white"
                android:textSize="20sp" />

        </FrameLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="20dp"
        android:id="@+id/p10layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/card_bg"
        android:clipToPadding="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="5dp"

            android:text="@string/parking_p10"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <ProgressBar
                android:id="@+id/p10progress"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:background="@drawable/circlebackground"
                android:progress="0"
                android:progressBackgroundTint="@color/colorPrimaryDark"
                android:progressDrawable="@drawable/circle"
                android:rotation="90"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/p10textprogress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text=""
                android:textColor="@color/white"
                android:textSize="20sp" />

        </FrameLayout>

    </LinearLayout>



    <LinearLayout
        android:layout_weight="1"
        android:id="@+id/p10insidelayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/card_bg"
        android:clipToPadding="true"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="5dp"
            android:text="@string/parking_p10_inside"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <ProgressBar
                android:id="@+id/p10insideprogress"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:progress="0"
                android:background="@drawable/circlebackground"
                android:progressDrawable="@drawable/circle"
                android:rotation="90"
                android:textAlignment="center" />


            <TextView
                android:id="@+id/p10insidetextprogress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text=""
                android:textColor="@color/white"
                android:textSize="20sp" />

        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:id="@+id/p10electriclayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/card_bg"
        android:backgroundTint="@color/green"
        android:clipToPadding="true"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="5dp"
            android:text="@string/p10_electric_usage"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <ProgressBar
                android:id="@+id/p10electricprogress"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:progress="0"
                android:background="@drawable/circlebackground"
                android:backgroundTint="@color/darkGreen"
                android:progressDrawable="@drawable/circle"
                android:rotation="90"
                android:textAlignment="center" />


            <TextView
                android:id="@+id/p10electrictextprogress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text=""
                android:textColor="@color/white"
                android:textSize="20sp" />

        </FrameLayout>

    </LinearLayout>
</LinearLayout>